# visual-search

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
search/: .gitignore  Cargo.toml
search/src/: bfs.rs  graph.rs  greedy.rs  lib.rs
search/src/map/: image_buffer.rs  mod.rs
sfml-ui/: Cargo.toml
sfml-ui/src/: frame_counter.rs  image_buffer.rs  main.rs
src/search/: graph.rs  image.rs  lib.rs  map.rs  png_image.rs
src/search/map/: image_buffer.rs  mod.rs  png.rs
