[package]
name = "cli"
version = "0.1.0"
authors = ["Radek Szymczyszyn <radoslaw.szymczyszyn@erlang-solutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
log = "0.4.11"
png = "0.16.7"
rustc-serialize = "0.3.24"
search = { path = "../search" }
